<resources>
    <string name="app_name">Aarogya</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="sign_in_text">Sign In</string>
    <string name="enter_your_email">Enter your mail</string>
    <string name="enter_your_password_text">Enter your password</string>
    <string name="sign_up_question">Don\'t have an account? </string>
    <string name="sign_up_here_text">Sign Up here</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="confirm_your_password_text">Confirm your password</string>
    <string name="sign_in_question">Already have an account ?</string>
    <string name="sign_in_here_text">Sign In here</string>
    <string name="enter_your_name_text">Enter your name</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_app">About App</string>

    <string name="sign_out_text">Sign Out</string>
    <string name="signout_question">Do you want to Sign out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hospitals_list">Hospitals List</string>
    <string name="add_hospital">Add Hospital</string>
    <string name="save_data">Save Data</string>
    <string name="enter_hospital_name">Enter Hospital Name</string>
    <string name="enter_hospital_id">Enter Hospital Id</string>
    <string name="enter_hospital_address">Enter Hospital Address</string>
    <string name="sample_hospital_name">Mahatma Gandhi Hospital</string>
    <string name="sample_hospital_address">Sector 2, MVP Colony, Visakhapatnam, Andhra pradesh, Pincode: 530013</string>
    <string name="doctors_list">Doctors List</string>
    <string name="sample_doctor_name">Dr. Rajanikanth</string>
    <string name="sample_doctor_specialization">Neurology</string>
    <string name="sample_doctor_experience">8 years</string>
    <string name="sample_doctor_availability">Monday - Friday,
Time: 9:00 AM to 6:00 PM</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="enter_doctor_id">Enter Doctor Id</string>
    <string name="enter_doctor_name">Enter Doctor name</string>
    <string name="enter_specialization">Enter Specialization</string>
    <string name="enter_experience_in_years">Enter Experience in years</string>
    <string name="enter_availability_of_doctor">Enter Availability of Doctor</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="name">Name</string>
    <string name="specialization">Specialization</string>
    <string name="experience">Experience</string>
    <string name="availability">Availability</string>
    <string name="hospital_details">Hospital Details</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="address">Address</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="patient_details">Patient Details</string>
    <string name="enter_patient_details">Enter Patient Details</string>
    <string name="save_appointment">Save Appointment</string>
    <string name="explain_problem">Explain problem</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="gender">Gender</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="patient_name">Patient Name</string>
    <string name="sample_patient_name">Rammohan</string>
    <string name="age">Age</string>
    <string name="sample_patient_age">24</string>
    <string name="sample_patient_gender">Male</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="sample_apt_date">21-11-2022</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="sample_apt_time">4:00 PM</string>
    <string name="patient_problem">Patient Problem</string>
    <string name="sample_patient_problem">Shaking hands, nerves pain, head aches</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="appointment_id">Appointment Id</string>
    <string name="my_profile">My Profile</string>
    <string name="save">Save</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="select_state_heading">Select your state to find hospital</string>
    <string name="sample_state_name">Andhra Pradesh</string>
    <string name="your_profile">Your Profile</string>

</resources>