<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/doctor_pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:scaleType="centerCrop"
        app:civ_border_width="1dp"
        android:src="@drawable/doctor_icon2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/doctor_card"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/doctor_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardUseCompatPadding="true"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/cardBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/doctor_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="@string/sample_doctor_name"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:fontFamily="@font/comic_neue_bold"/>

            <TextView
                android:id="@+id/doctor_specialization_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="@string/sample_doctor_specialization"
                android:textSize="14sp"
                android:fontFamily="@font/comic_neue_bold"
                android:textColor="@color/blackNwhite"/>

            <TextView
                android:id="@+id/doctor_experience_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="@string/sample_doctor_experience"
                android:textSize="14sp"
                android:fontFamily="@font/comic_neue_bold"
                android:textColor="@color/blackNwhite"/>

            <TextView
                android:id="@+id/doctor_availability_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                tools:text="@string/sample_doctor_availability"
                android:textSize="14sp"
                android:fontFamily="@font/comic_neue_bold"
                android:textColor="@color/blackNwhite"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>