<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.SignInFragment">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/aarogya_icon"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        android:fontFamily="@font/comic_neue_bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/signin_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/cardBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SignIn_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in_text"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/comic_neue_bold"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_your_email"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:hintTextColor="@color/blackNwhite"
                android:textColorHint="@color/blackNwhite"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:fontFamily="@font/comic_neue"
                    android:textColor="@color/blackNwhite"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_your_password_text"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:hintTextColor="@color/blackNwhite"
                android:textColorHint="@color/blackNwhite"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:fontFamily="@font/comic_neue"
                    android:textColor="@color/blackNwhite"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/sign_in_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_button_back"
                app:backgroundTint="@color/text_color"
                android:text="@string/sign_in_text"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:fontFamily="@font/comic_neue_bold"/>

            <LinearLayout
                android:id="@+id/sign_up_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/sign_up_here_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_question"
                    android:textColor="@color/blackNwhite"
                    android:fontFamily="@font/comic_neue"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/sign_up_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_here_text"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/comic_neue_bold"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>